--- a/telegraf/Dockerfile
+++ b/telegraf/Dockerfile
@@ -1,7 +1,7 @@
 FROM golang:alpine
 
 RUN apk add curl git make
-RUN go get -u github.com/golang/dep/cmd/dep
+RUN curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
 RUN mkdir -p $(go env GOPATH)/src/github.com/influxdata/telegraf && \
     cd $(go env GOPATH)/src/github.com/influxdata/telegraf && \
     git clone https://wwwin-github.cisco.com/spa-ie/telegraf -b telemetry-dc2020 . && \
